--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,6 +7,8 @@
     --color-neutral-1: #e5e7eb;
     --color-neutral-2: #343434;
     --color-neutral-3: #262626;
+
+    --linear-gradient: linear-gradient(120deg, var(--color-primary-1), var(--color-primary-2));
 }
 
 * {
@@ -21,5 +23,55 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    background: var(--linear-gradient);
 }
 
+.calculator {
+    background-color: var(--color-neutral-3);
+    color: var(--color-neutral-1);
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.323);
+    border-radius: 8px;
+    padding: 20px;
+    text-align: center;
+}
+
+.input-container {
+    margin: 25px 0px;
+}
+
+.input-group {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.input-group input {
+    background-color: var(--color-neutral-2);
+    color: var(--color-neutral-1);
+    padding: 8px;
+    border: 1px solid var(--color-neutral-1);
+    border-radius: 4px;
+    width: 100px;
+    font-size: 16px;
+    text-align: center;
+}
+
+.input-group span {
+    background-color: var(--color-neutral-2);
+    padding: 0px 15px;
+}
+
+.input-group p {
+    background: var(--linear-gradient);
+    border-radius: 4px;
+    padding: 10px;
+    width: 100px;
+}
+
+.input-text {
+    margin: 15px 0px;
+}
+
+.input-group input:focus-visible {
+    outline: transparent;
+}
